tests/files/flow_controller_tests/should_run/097.cmdr
x = 8;
print arccsc(x);