tests/files/flow_controller_tests/should_fail/086.cmdr
x = "cat";
print arccsc(x);